		- Many NPC dialog options are automated.
		- The Battle for Azeroth War Campaign Adventure Map is automated. This feature includes the Adventure Map in The Great Seal and Boralus.
			- Alliance: Vol'dun -> Nazmir -> Zuldazar (Boralus: Tiragarde Sound)
			- Horde: Stormsong Valley -> Tiragarde Sound -> Drustvar (The Great Seal: Zuldazar)
		- The initial mission on the Garrison Mission Table is automated.
		- The purchase of all Riding is automated if the character has at least twice the cost of the training in gold.
		- The player is opted into War Mode if they're at least level 20 and in Stormwind City or Orgrimmar.
		- The selection of Tanaan Jungle from the Hero's Call Board is now automated.
	Bug Fixes:
		- Fixed an issue where the merchant window had to be open twice to purchase quest items if the merchant wasn't in the game's cache.
		- Fixed an issue that prevented the 'thank' emote during the "The Games We Play" quest in Ardenweald.
		- Fixed an issue that caused incomplete quests to take precedence over those that are complete.
		- Fixed an issue where dialog options had priority over quests.
		- Fixed an issue that prevented the pausing of the quest automations from taking effect when speaking with Gallywix on the boat in Zuldazar.
		- Fixed an issue for moments when a GUID wasn't available and dialog options were shown. (Fixes the gate to Ravencrest Cemetary in the Darkpens of Val'sharah.)
		- Fixed an issue where the Quest Complete window would sometimes remain open. This was particularly noticable after interacting with Rexxar in Stormsong Valley to champion him.
	Feature Roadmap:
		- Localize the addon to support more languages.
		- Add an options panel for players to opt in and out of automations.
		- Automate Flight Path selection where appropriate.
	Automation Roadmap:
		- Automate an Alliance route.
		- Automate the Savage Fight Club selection in Gorgrond. (Horde only!)